introducing connection text container to wrap all connection text

--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -135,19 +135,27 @@
         fill: #ff7800; }
     .diagram-designer .items svg.connection-container .segment-point-move-path {
       stroke: #ff7800; }
+    .diagram-designer .items div.c-t {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 0; }
+      .diagram-designer .items div.c-t div.c-text {
+        position: absolute;
+        font-size: 10px; }
+        .diagram-designer .items div.c-t div.c-text .c-name {
+          position: relative;
+          left: -50%; }
     .diagram-designer .items.highlight-mode .designer-item,
-    .diagram-designer .items.highlight-mode .designer-connection {
+    .diagram-designer .items.highlight-mode .designer-connection,
+    .diagram-designer .items.highlight-mode .c-t {
       opacity: 0.1;
       cursor: pointer; }
     .diagram-designer .items.highlight-mode .designer-item.highlighted,
-    .diagram-designer .items.highlight-mode .designer-connection.highlighted {
+    .diagram-designer .items.highlight-mode .designer-connection.highlighted,
+    .diagram-designer .items.highlight-mode .c-t.highlighted {
       opacity: 1.0; }
-    .diagram-designer .items div.c-text {
-      position: absolute;
-      font-size: 10px; }
-      .diagram-designer .items div.c-text .c-name {
-        position: relative;
-        left: -50%; }
   .diagram-designer .dropRegion {
     width: 0;
     height: 0;
