connection texts (srctext, name, dsttext) in-place edit support in DiagramDesigner widget

--- a/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
+++ b/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
@@ -206,6 +206,11 @@ $rotation-deg-color: #666666;
           position: relative;
           left: -50%;
         }
+
+        input {
+          height: 20px !important;
+          min-width: 50px;
+        }
       }
     }
 
