--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -147,6 +147,9 @@
         .diagram-designer .items div.c-t div.c-text .c-name {
           position: relative;
           left: -50%; }
+        .diagram-designer .items div.c-t div.c-text input {
+          height: 20px !important;
+          min-width: 50px; }
     .diagram-designer .items.highlight-mode .designer-item,
     .diagram-designer .items.highlight-mode .designer-connection,
     .diagram-designer .items.highlight-mode .c-t {
