updating item rotation button in SelectionManager
- rotation button places at the bottom of the selection
- rotation fuinctionality can be turned on/off by calling
DiagramDesignerWidget.enableRotate(true/false)

--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -39,14 +39,10 @@
         .diagram-designer .items .selection-outline .s-btn.delete {
           top: -13px;
           right: -13px; }
-        .diagram-designer .items .selection-outline .s-btn.rotate.top {
+        .diagram-designer .items .selection-outline .s-btn.rotate.bottom {
           left: 50%;
           margin-left: -13px;
-          top: -13px; }
-        .diagram-designer .items .selection-outline .s-btn.rotate.right {
-          top: 50%;
-          margin-top: -13px;
-          right: -13px; }
+          bottom: -13px; }
       .diagram-designer .items .selection-outline .rotation-deg {
         text-align: center;
         vertical-align: middle;
