turn off attribute hover style in 'highlight' mode

--- a/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.css
@@ -78,3 +78,7 @@
   background-color: white; }
   .selected .meta-decorator .add-new:hover {
     background-color: #ffffc0; }
+
+.items.highlight-mode .meta-decorator .attributes .attr:hover {
+  cursor: default;
+  background-color: white; }
