--- a/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.scss
+++ b/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.scss
@@ -91,3 +91,18 @@ $selected-attributes-add-new-hover-background-color: #FFFFC0;
     }
   }
 }
+
+.items {
+  &.highlight-mode {
+    .meta-decorator {
+      .attributes {
+        .attr {
+          &:hover {
+            cursor: default;
+            background-color: $background-color;
+          }
+        }
+      }
+    }
+  }
+}
