--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -17,8 +17,8 @@
       border: #52a8ec solid 1px;
       z-index: 100000; }
     .diagram-designer .items .selection-outline {
-      background: rgba(255, 255, 0, 0.1);
-      border: black dashed 1px;
+      background: rgba(255, 255, 0, 0.05);
+      border: rgba(0, 0, 0, 0.5) dashed 1px;
       position: absolute;
       pointer-events: none;
       -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 8px rgba(0, 0, 0, 0.6);
