--- a/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
+++ b/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
@@ -9,8 +9,8 @@
 
 $diagram-designer-selection-rubber-band-background-color: rgba(219, 234, 252, 0.49);
 $diagram-designer-selection-rubber-band-border-color: #52A8EC;
-$diagram-designer-selection-outline-background-color: rgba(255, 255, 0, 0.1);
-$diagram-designer-selection-outline-border: #000000 dashed 1px;
+$diagram-designer-selection-outline-background-color: rgba(255, 255, 0, 0.05);
+$diagram-designer-selection-outline-border: rgba(0,0,0,0.5) dashed 1px;
 $diagram-designer-selection-outline-shadow-start: rgba(0, 0, 0, 0.075);
 $diagram-designer-selection-outline-shadow-end: rgba(0, 0, 0, 0.6);
 $diagram-designer-selection-outline-s-btn-background-color: #FFFFFF;
