--- a/client/css/bootstrap_webgme_ext.css
+++ b/client/css/bootstrap_webgme_ext.css
@@ -15,6 +15,12 @@
     background-position: 0 0;
 }
 
+[class^="icon-"].flip-vertical,
+[class*=" icon-"].flip-vertical {
+    -webkit-transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    transform: scaleX(-1);
+}
 
 /*** POPOVER extension ***/
 .popover {
@@ -25,6 +31,9 @@
     -webkit-user-select: all;
     -o-user-select: all;
     user-select: all;
+}
+.popover .popover-content.narrow {
+    padding: 5px 5px;
 }
 
 
