--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -70,10 +70,6 @@
         -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
         -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
         box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
-      .diagram-designer .items .connection-connector.connector.connection-end-accept {
-        background-color: lime; }
-      .diagram-designer .items .connection-connector.connector.connection-end-reject {
-        background-color: red; }
     .diagram-designer .items .c-area {
       position: absolute;
       width: 8px;
@@ -101,10 +97,6 @@
         -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
         -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
         box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
-      .diagram-designer .items .c-d-end.connection-end-accept {
-        background-color: lime; }
-      .diagram-designer .items .c-d-end.connection-end-reject {
-        background-color: red; }
       .diagram-designer .items .c-d-end.src {
         border-color: red;
         color: red; }
@@ -156,6 +148,8 @@
     .diagram-designer .items.highlight-mode .designer-connection.highlighted,
     .diagram-designer .items.highlight-mode .c-t.highlighted {
       opacity: 1.0; }
+    .diagram-designer .items.connection-drawing .connector:hover {
+      background-color: lime; }
   .diagram-designer .dropRegion {
     width: 0;
     height: 0;
