--- a/client/decorators/DecoratorWithPorts/DiagramDesigner/DecoratorWithPorts.DiagramDesignerWidget.scss
+++ b/client/decorators/DecoratorWithPorts/DiagramDesigner/DecoratorWithPorts.DiagramDesignerWidget.scss
@@ -5,7 +5,7 @@ $min-width: 65px;
 $height: 40px;
 $border: 1px solid #000000;
 $padding: 3px;
-$background-color: #C5F1FF;
+$background-color: #F0F0F0;
 $selected-background-color: #DBEAFC;
 $selected-border: 1px solid #52A8EC;
 $ports-background-color: #000000;
@@ -15,6 +15,8 @@ $center-ports-background-color: rgba(0, 255, 0, 0.5);
 $ports-width : 50px;
 $ports-separator-width: 15px;
 
+$accept-droppable-background-color: #00FF00;
+
 .decorator-with-ports {
   min-width: $min-width;
   min-height: $height;
@@ -22,6 +24,7 @@ $ports-separator-width: 15px;
   background-color: $background-color;
   padding: $padding;
   text-align: center;
+  position: relative;
 
   .name {
     white-space: nowrap;
@@ -93,6 +96,20 @@ $ports-separator-width: 15px;
       left: 50%;
       margin-left: -8px;
     }
+  }
+
+  .ref {
+    position: absolute;
+    top: 0;
+    right: 2px;
+    
+    &.nonset {
+      opacity: 0.4;
+    }
+  }
+  
+  &.accept-droppable {
+    background-color: $accept-droppable-background-color;
   }
 }
 
