--- a/client/html/Layouts/Default/DefaultLayout.html
+++ b/client/html/Layouts/Default/DefaultLayout.html
@@ -2,15 +2,8 @@
 <div class="ui-layout-east side-panel"></div>
 <div class="ui-layout-west side-panel"></div>
 <div class="ui-layout-north navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-    </div>
+    <div class="navbar-inner"></div>
 </div>
 <div class="ui-layout-south navbar navbar-inverse navbar-fixed-bottom">
-    <div class="navbar-inner">
-        <div class="pull-left inline">
-            <div class="navbar-text">
-                <div class="webgme-version">version: pre-alpha...</div>
-            </div>
-        </div>
-    </div>
+    <div class="navbar-inner"></div>
 </div>
