--- a/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
+++ b/client/decorators/ModelDecorator/Core/_ModelDecorator.scss
@@ -14,6 +14,8 @@ $center-ports-background-color: rgba(0, 255, 0, 0.5);
 $ports-width : 50px;
 $ports-separator-width: 15px;
 $accept-droppable-background-color: #00FF00;
+$ref-hover-background-color: rgba(82, 168, 236, 0.8);
+$ref-hover-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 
 @mixin model_decorator_core {
   .model-decorator {
@@ -78,9 +80,30 @@ $accept-droppable-background-color: #00FF00;
       position: absolute;
       top: 0;
       right: 2px;
+      height: 15px;
+      width: 15px;
+      margin-top: 2px;
+      border-radius: 5px;
 
       &.nonset {
         opacity: 0.4;
+      }
+
+      &.inverse-on-hover:hover {
+        background-color: $ref-hover-background-color;
+        -webkit-box-shadow: $ref-hover-shadow;
+        -moz-box-shadow: $ref-hover-shadow;
+        box-shadow: $ref-hover-shadow;
+
+        [class^="icon-"]:not(.icon-white),
+        [class*=" icon-"]:not(.icon-white) {
+          background-image: url("../../../img/glyphicons-halflings-white.png");
+        }
+      }
+
+      [class^="icon-"],
+      [class*=" icon-"] {
+        margin-top: -2px;
       }
     }
   }
