--- a/client/html/Layouts/Default/DefaultLayout.html
+++ b/client/html/Layouts/Default/DefaultLayout.html
@@ -1,9 +1,5 @@
 <div class="ui-layout-center"></div>
 <div class="ui-layout-east side-panel"></div>
 <div class="ui-layout-west side-panel"></div>
-<div class="ui-layout-north navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner"></div>
-</div>
-<div class="ui-layout-south navbar navbar-inverse navbar-fixed-bottom">
-    <div class="navbar-inner"></div>
-</div>
+<div class="ui-layout-north"></div>
+<div class="ui-layout-south"></div>
