--- a/client/css/Widgets/ProjectTitle/ProjectTitleWidget.css
+++ b/client/css/Widgets/ProjectTitle/ProjectTitleWidget.css
@@ -5,12 +5,11 @@
  */
 .project-title {
   margin-left: 10px;
-  padding-top: 10px; }
+  margin-right: 10px; }
   .project-title .title {
     font-size: 20px;
     font-weight: 200;
-    line-height: 20px;
-    color: #ffffff; }
+    color: white; }
   .project-title .readOnlyInfo {
     display: none;
     margin-left: 5px;
