--- a/client/css/Panels/Visualizer/VisualizerPanel.css
+++ b/client/css/Panels/Visualizer/VisualizerPanel.css
@@ -4,3 +4,13 @@
   margin-left: 7px; }
 .visualizer-panel > ul {
   margin-bottom: 0; }
+.visualizer-panel .pp {
+  text-align: center;
+  font-size: 11px;
+  font-weight: bold;
+  line-height: 18px;
+  color: #999;
+  background-color: #ddd;
+  text-transform: uppercase;
+  margin-right: 0;
+  margin-left: 0; }
