--- a/client/scss/Panels/Visualizer/VisualizerPanel.scss
+++ b/client/scss/Panels/Visualizer/VisualizerPanel.scss
@@ -8,5 +8,17 @@
   > ul {
     margin-bottom: 0;
   }
+
+  .pp {
+    text-align: center;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 18px;
+    color: #999;
+    background-color: #ddd;
+    text-transform: uppercase;
+    margin-right: 0;
+    margin-left: 0;
+  }
 }
 
