using CodeMirror component for fancy Javascript text editing in constaint editor

--- a/client/decorators/MetaDecorator/DiagramDesigner/ConstraintDetailsDialog.css
+++ b/client/decorators/MetaDecorator/DiagramDesigner/ConstraintDetailsDialog.css
@@ -6,3 +6,5 @@
 .constraint-details-dialog {
   width: 760px !important;
   margin-left: -380px !important; }
+  .constraint-details-dialog .modal-body {
+    max-height: 500px; }
