--- a/client/decorators/MetaDecorator/DiagramDesigner/ConstraintDetailsDialog.scss
+++ b/client/decorators/MetaDecorator/DiagramDesigner/ConstraintDetailsDialog.scss
@@ -7,4 +7,8 @@
 .constraint-details-dialog {
   width: 760px !important;
   margin-left: -380px !important;
+
+  .modal-body {
+    max-height: 500px;
+  }
 }
