--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -161,22 +161,11 @@
     .diagram-designer .drop-region.reject-droppable {
       background-color: rgba(255, 0, 0, 0.1); }
 
-div.diagram-designer-zoom {
-  height: 100px;
-  width: 3px;
+div.css-zoom {
   position: absolute;
   top: 60px;
   left: 10px; }
-  div.diagram-designer-zoom a.ui-slider-handle {
-    width: 15px;
-    height: 15px;
-    left: -7px;
-    outline: none; }
-    div.diagram-designer-zoom a.ui-slider-handle [class*="icon-"] {
-      margin-top: -2px; }
-    div.diagram-designer-zoom a.ui-slider-handle .diagram-designer-zoom-label {
-      top: -2px;
-      left: 17px;
-      position: absolute;
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      font-size: 10px; }
+  div.css-zoom a.ui-slider-handle .css-zoom-label {
+    top: -2px; }
+  div.css-zoom i {
+    margin-top: -2px; }
