--- a/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.scss
+++ b/client/decorators/MetaDecorator/DiagramDesigner/MetaDecorator.DiagramDesignerWidget.scss
@@ -124,6 +124,16 @@ $section-title-background-color: #F3F3F3;
       bottom: $connector-size / -2;
     }
   }
+
+  .text-meta {
+    position: absolute;
+    top: 0;
+    right: 1px;
+    height: 15px;
+    width: 15px;
+    margin-top: 2px;
+    border-radius: 5px;
+  }
 }
 
 .selected {
